# tsyganenko

./: .gitignore  .zenodo.json  CMakeLists.txt  README.md  Tsyganenko - Python examples.ipynb  error1.txt  pyproject.toml  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: pypi.yaml  testpypi.yaml  tests.yaml
notebooks/: Dungey Cycle.mov  Introductory Slides.ipynb  Tsyganenko - Python examples.ipynb
original-fortran/: Makefile  test_geopack.f90
src/tsyganenko/: Makefile  __init__.py  convert.py  geopack.pyf  trace.py
tests/: test.py
tsyganenko/: Makefile  __init__.py  convert.py  geopack08.for  geopack_py.pyf  trace.py
